ingress-rule/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sock-shop
  name: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx # this should be uncommented if ingress used in "regular" cluster
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: the-sock-shop.funmilayofagoyinbo.com
    http:
      path:
        backend:
          service:
            name: front-end
            port:
              number: 80
    
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-vote-front
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: voting-app.funmilayofagoyinbo.com
    http:
      path:
        backend:
          service:
            name: azure-vote-front
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring 
spec:
  ingressClassName: external-nginx
  rules:
  - host: grafana.funmilayofagoyinbo.com
    http:
      paths:
      - path: /
        pathType: prefix
        backend:
          service:
            name: 
            port:
              number:
